--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Style Transfer Mirror Example using p5.js</title>
+  <title>Style Transfer - Subway Art - using p5.js and ml5.js</title>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/addons/p5.dom.min.js"></script>
   <script src="https://unpkg.com/ml5@0.1.1/dist/ml5.min.js" type="text/javascript"></script>
   
   <style>
+
+    html, body {
+      font-family: 'Helvetica', sans-serif;
+      font-size: 1.2rem;
+      background: black;
+      color: white;
+      font-style: italic;
+    }
+
+    a {
+      color: #C772A1;
+    }
+
     img {
       width: 640px;
       height: auto;
@@ -29,10 +42,10 @@
 <script src="sketch.js"></script>
 
 <body>
-  <h1>Style Transfer Mirror Example using ml5.js and p5.js</h1>
+  <div> <strong>Style Transfer Example</strong><br> Subway Art <br> Using p5.js and ml5.js</div>
   <p id='status'>Loading model...</p>
 
-  <p>Style Source: <a target="_blank" href="https://en.wikipedia.org/wiki/Dwelling_in_the_Fuchun_Mountains">Dwelling in the Fuchun Mountains (1350) - Huang Gongwang</a></p>
+  <p>Style Source: <a target="_blank" href="https://www.amazon.com/Subway-Art-Henry-Chalfant/dp/0500292124">Subway Art  - Martha Cooper and Henry Chalfant</a></p>
   <img src="images/style.jpg" />
   <div id="canvasContainer"></div>
 </body>
