Added Github link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <p id='status'>Loading model...</p>
 
   <p>Style Source: <a target="_blank" href="https://www.amazon.com/Subway-Art-Henry-Chalfant/dp/0500292124">Subway Art  - Martha Cooper and Henry Chalfant</a></p>
-  <p><a href="https://github.com/alsino/style-transfer-subway-art">Instructions on Github</a></p>
+  <p>Instructions on <a href="https://github.com/alsino/style-transfer-subway-art">Github</a></p>
   <img src="images/style.jpg" />
   <div id="canvasContainer"></div>
 </body>
